[package]
name = "associative-cache-test-utils"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
associative-cache = { path = "../..", features = ["rand"] }
quickcheck = "1.0.1"
rand = "0.7.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benches"
harness = false
